[gd_scene load_steps=19 format=2]

[ext_resource path="res://Inventory.gd" type="Script" id=1]
[ext_resource path="res://EngineEffects.gd" type="Script" id=2]
[ext_resource path="res://Controller.gd" type="Script" id=3]
[ext_resource path="res://assets/Eamonn/particle.png" type="Texture" id=4]
[ext_resource path="res://Player.gd" type="Script" id=5]
[ext_resource path="res://assets/millionthvector_cc_by/Faction1-Spaceships-by-MillionthVector/tinyorange_n.png" type="Texture" id=6]
[ext_resource path="res://assets/millionthvector_cc_by/Faction1-Spaceships-by-MillionthVector/tinyorange.png" type="Texture" id=7]
[ext_resource path="res://InteractRange.gd" type="Script" id=8]
[ext_resource path="res://Inventory.tscn" type="PackedScene" id=9]
[ext_resource path="res://effects/EngineExhaust.tscn" type="PackedScene" id=10]

[sub_resource type="Gradient" id=4]
offsets = PoolRealArray( 0, 0.294416, 0.604061, 1 )
colors = PoolColorArray( 1, 0.966797, 0, 1, 0.834961, 0, 0, 1, 0.420898, 0.420898, 0.420898, 1, 0, 0, 0, 0 )

[sub_resource type="GradientTexture" id=5]
gradient = SubResource( 4 )

[sub_resource type="Curve" id=6]
min_value = 1.0
max_value = 4.0
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 2.48636 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=7]
curve = SubResource( 6 )

[sub_resource type="ParticlesMaterial" id=8]
lifetime_randomness = 0.03
flag_disable_z = true
spread = 3.28
gravity = Vector3( 0, 0, 0 )
initial_velocity = 182.54
initial_velocity_random = 0.38
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale_curve = SubResource( 7 )
color_ramp = SubResource( 5 )

[sub_resource type="CapsuleShape2D" id=1]
radius = 21.4667
height = 56.6082

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 14.7799, 32.1125 )

[sub_resource type="CircleShape2D" id=3]
radius = 91.3431

[node name="Player" type="KinematicBody2D"]
collision_mask = 2
script = ExtResource( 5 )

[node name="EngineEffects" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="Particles2D" type="Particles2D" parent="EngineEffects" instance=ExtResource( 10 )]
position = Vector2( -43.8212, -13.6263 )
rotation = 3.14159
amount = 35
local_coords = false
process_material = SubResource( 8 )
texture = ExtResource( 4 )

[node name="Particles2D2" type="Particles2D" parent="EngineEffects" instance=ExtResource( 10 )]
position = Vector2( -44.1957, 14.0924 )
rotation = 3.14159
amount = 26
local_coords = false
process_material = SubResource( 8 )
texture = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
rotation = 1.5708
texture = ExtResource( 7 )
normal_map = ExtResource( 6 )

[node name="Controller" type="Node" parent="."]
pause_mode = 2
script = ExtResource( 3 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="Weapons" type="Node2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
rotation = 1.5708
shape = SubResource( 1 )

[node name="Inventory" type="Node" parent="." instance=ExtResource( 9 )]
script = ExtResource( 1 )
default_contents = {
"crew": 1,
"metal": 10
}

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -11.694, 0 )
shape = SubResource( 2 )

[node name="InteractRange" type="Area2D" parent="."]
script = ExtResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractRange"]
visible = false
shape = SubResource( 3 )

[node name="Timer" type="Timer" parent="InteractRange"]
wait_time = 0.1
autostart = true
[connection signal="area_entered" from="InteractRange" to="InteractRange" method="_on_area_entered"]
[connection signal="area_exited" from="InteractRange" to="InteractRange" method="_on_area_exited"]
[connection signal="body_entered" from="InteractRange" to="InteractRange" method="_on_body_entered"]
[connection signal="body_exited" from="InteractRange" to="InteractRange" method="_on_body_exited"]
[connection signal="timeout" from="InteractRange/Timer" to="InteractRange" method="_on_Timer_timeout"]
